# panorama_visual_slam

./: CMakeLists.txt  README.md
config/: my_equirectangular.yaml
results/: frame_trajectory.txt  pointcloud.ply
src/: run_img.cc  run_video.cc
